--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">calculator</string>
     <string name="enter_your_number">Enter your Number</string>
+    <string name="enter_url">enter url</string>
 </resources>
